# wgmath

./: .gitignore  Cargo.toml  README.md
crates/wgcore/: CHANGELOG.md  Cargo.toml  README.md
crates/wgcore-derive/: Cargo.toml
crates/wgcore-derive/src/: lib.rs
crates/wgcore/examples/: buffer_readback.rs  composable.wgsl  compose.rs  compose_dependency.wgsl  compose_kernel.wgsl  encase.rs  encase.wgsl  hot_reloading.rs  hot_reloading.wgsl  kernel.wgsl  overwrite.rs  overwritten_dependency.wgsl  timestamp_queries.rs  timestamp_queries.wgsl
crates/wgcore/src/: composer.rs  gpu.rs  hot_reloading.rs  kernel.rs  lib.rs  shader.rs  shapes.rs  tensor.rs  timestamps.rs  utils.rs
crates/wgebra/: CHANGELOG.md  Cargo.toml  README.md
crates/wgebra/src/: lib.rs
crates/wgebra/src/geometry/: cholesky.rs  cholesky.wgsl  eig2.rs  eig2.wgsl  eig3.rs  eig3.wgsl  eig4.rs  eig4.wgsl  inv.rs  inv.wgsl  lu.rs  lu.wgsl  mod.rs  qr2.rs  qr2.wgsl  qr3.rs  qr3.wgsl  qr4.rs  qr4.wgsl  quat.rs  quat.wgsl  rot2.rs  rot2.wgsl  sim2.rs  sim2.wgsl  sim3.rs  sim3.wgsl  svd2.rs  svd2.wgsl  svd3.rs  svd3.wgsl
crates/wgebra/src/linalg/: gemm.rs  gemm.wgsl  gemv.rs  gemv.wgsl  mod.rs  op_assign.rs  op_assign.wgsl  reduce.rs  reduce.wgsl  shape.rs  shape.wgsl
crates/wgebra/src/utils/: min_max.rs  min_max.wgsl  mod.rs  trig.rs  trig.wgsl
crates/wgml/: Cargo.toml  README.md
crates/wgml/examples/: gpt2.rs  llama2.rs
crates/wgml/src/: gguf.rs  lib.rs  quantization.rs
crates/wgml/src/models/: mod.rs  sampler.rs
crates/wgml/src/models/gpt2/: cpu.rs  mod.rs  tokenizer.rs  transformer.rs
crates/wgml/src/models/llama2/: cpu.rs  mod.rs  tokenizer.rs  transformer.rs
crates/wgml/src/ops/: batched_multiquery_attention.rs  batched_multiquery_attention.wgsl  layernorm.rs  layernorm.wgsl  mod.rs  rms_norm.rs  rms_norm.wgsl  rope.rs  rope.wgsl  silu.rs  silu.wgsl  softmax.rs  softmax.wgsl  unary.rs  unary.wgsl
crates/wgparry/: CHANGELOG.md  README.md
crates/wgparry/crates/wgparry2d/: Cargo.toml
crates/wgparry/crates/wgparry3d/: Cargo.toml
crates/wgparry/src/: ball.rs  ball.wgsl  capsule.rs  capsule.wgsl  cone.rs  cone.wgsl  contact.rs  contact.wgsl  cuboid.rs  cuboid.wgsl  cylinder.rs  cylinder.wgsl  lib.rs  projection.rs  projection.wgsl  ray.rs  ray.wgsl  segment.rs  segment.wgsl  shape.rs  shape.wgsl  shape_fake_cone.wgsl  shape_fake_cylinder.wgsl  triangle.rs  triangle.wgsl
crates/wgrapier/: CHANGELOG.md  README.md
crates/wgrapier/crates/wgrapier2d/: Cargo.toml
crates/wgrapier/crates/wgrapier3d/: Cargo.toml
crates/wgrapier/examples/: gravity.rs  gravity.wgsl
crates/wgrapier/src/: lib.rs
crates/wgrapier/src/dynamics/: body.rs  body.wgsl  integrate.rs  integrate.wgsl  mod.rs
