[workspace]
members = [
    "crates/wgcore", "crates/wgebra", "crates/wgml",
    "crates/wgparry/crates/wgparry2d", "crates/wgparry/crates/wgparry3d",
    "crates/wgrapier/crates/wgrapier2d", "crates/wgrapier/crates/wgrapier3d"
]
resolver = "2"

[workspace.dependencies]
nalgebra = { version = "0.33.1", features = ["convert-bytemuck"] }
wgpu = { version = "23", features = ["naga-ir"] }
bytemuck = { version = "1", features = ["derive"] }
anyhow = "1"
async-channel = "2"
naga_oil = "0.16"
thiserror = "1"
encase = { version = "0.10.0", features = ["nalgebra"] }

[workspace.lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim2", "dim3"))'
] }

[profile.release]
opt-level = 'z'
