[package]
name = "wgcore"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
description = "Utilities and abstractions for composable WGSL shaders."
homepage = "https://wgmath.rs"
repository = "https://github.com/dimforge/wgmath"
readme = "README.md"
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
derive = ["wgcore-derive"]

[dependencies]
nalgebra = { workspace = true }
wgpu = { workspace = true, features = ["wgsl"] }
bytemuck = { workspace = true }
anyhow = { workspace = true }
async-channel = { workspace = true }
naga_oil = { workspace = true }
encase = { workspace = true }

wgcore-derive = { version = "0.2", path = "../wgcore-derive", optional = true }

dashmap = "5"
notify = { version = "7" } # , optional = true }

# For test_shader_compilation
paste = "1"

[dev-dependencies]
nalgebra = { version = "0.33", features = ["rand"] }
futures-test = "0.3"
serial_test = "3"
approx = "0.5"
async-std = { version = "1", features = ["attributes"] }
