[package]
name = "wgebra"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
description = "Composable WGSL shaders for linear algebra."
homepage = "https://wgmath.rs"
repository = "https://github.com/dimforge/wgmath"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
wgpu = { workspace = true }
bytemuck = { workspace = true }
naga_oil = { workspace = true }
nalgebra = { workspace = true }
encase = { workspace = true, features = ["nalgebra"] }

wgcore = { version = "0.2", path = "../wgcore", features = ["derive"] }

[dev-dependencies]
nalgebra = { version = "0.33", features = ["rand"] }
futures-test = "0.3"
serial_test = "3"
approx = "0.5"