[package]
name = "wgrapier2d"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
description = "Cross-platform 2D rigid-body physics."
homepage = "https://wgmath.rs"
repository = "https://github.com/dimforge/wgmath"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "wgrapier2d"
path = "src/lib.rs"
required-features = ["dim2"]

[lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim3"))',
] }

[features]
default = ["dim2"]
dim2 = []

[dependencies]
nalgebra = { workspace = true }
wgpu = { workspace = true }
naga_oil = { workspace = true }
bytemuck = { workspace = true }
encase = { workspace = true }

wgcore = { version = "0.1", path = "../../../wgcore" }
wgebra = { version = "0.1", path = "../../../wgebra" }
wgparry2d = { version = "0.1", path = "../../../wgparry/crates/wgparry2d" }


[dev-dependencies]
nalgebra = { version = "0.33", features = ["rand"] }
futures-test = "0.3"
serial_test = "3"
approx = "0.5"
async-std = { version = "1", features = ["attributes"] }
#bevy = { version = "0.14", features = ["shader_format_glsl", "shader_format_spirv"], }
#bevy_panorbit_camera = "0.19.1"