[package]
name = "wgrapier3d"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
description = "Cross-platform 3D rigid-body physics."
homepage = "https://wgmath.rs"
repository = "https://github.com/dimforge/wgmath"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "wgrapier3d"
path = "../../src/lib.rs"
required-features = ["dim3"]

[lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim2"))',
] }

[features]
default = ["dim3"]
dim3 = []

[dependencies]
nalgebra = { workspace = true }
wgpu = { workspace = true }
naga_oil = { workspace = true }
bytemuck = { workspace = true }
encase = { workspace = true }

wgcore = { version = "0.2", path = "../../../wgcore" }
wgebra = { version = "0.2", path = "../../../wgebra" }
wgparry3d = { version = "0.2", path = "../../../wgparry/crates/wgparry3d" }
rapier3d = "0.23"# TODO: should be behind a feature?
num-traits = "0.2"

[dev-dependencies]
nalgebra = { version = "0.33", features = ["rand"] }
futures-test = "0.3"
serial_test = "3"
approx = "0.5"
async-std = { version = "1", features = ["attributes"] }
#bevy = { version = "0.14", features = ["shader_format_glsl", "shader_format_spirv"] }
#bevy_panorbit_camera = "0.19.1"